# pwd2025-tp-6-backend-hml043

./: .gitignore  Axios_promise_axiosresponse_example.txt  Git_paso_a_paso.txt  TP7_install_vue3.txt  Vue3_Pinia_example.txt  package-lock.json  package.json  pyproject.toml  readme.md
app/: __init__.py
app/articulo/: articulo_controller.py  articulo_model.py  articulo_routes.py
app/categoria/: categoria_controller.py  categoria_model.py  categoria_routes.py
app/marca/: marca_controller.py  marca_model.py  marca_routes.py
app/proveedor/: __init__.py  proveedor_controller.py  proveedor_model.py  proveedor_routes.py
backend/: Git_paso_a_paso.txt  Prueba_postman.txt  db_init.py  main.py  pyproject.toml
backend/app/: __init__.py
backend/app/articulo/: __init__.py  articulo_controller.py  articulo_controller_con_print.py  articulo_model.py  articulo_routes.py
backend/app/categoria/: __init__.py  categoria_controller.py  categoria_model.py  categoria_routes.py
backend/app/marca/: __init__.py  marca_controller.py  marca_routes.py
backend/data/: data_productos.py
backend/database/: __init__.py
backend/static/: base.css
backend/templates/: categorias.html  index.html  productos.html
database/: __init__.py
frontend/: Lote_prueba_desdeBD.txt  package-lock.json
frontend/src/: App.vue  main.ts
frontend/src/assets/: main.css
frontend/src/components/: ItemManager.vue  ItemsList.vue
frontend/src/interfaces/: articulo.ts  categoria.ts  marca.ts  proveedor.ts
frontend/src/plugins/: axios.ts
frontend/src/router/: articulo_routes.ts  index.ts  (+3 more)
(+27 files in other folders)
